# ACore2025

allocator/: Cargo.toml
allocator/src/: buddy_allocator.rs  lib.rs  linked_list.rs  safe_buddy_allocator.rs
fs/: Cargo.toml
fs-fuse/: Cargo.toml
fs-fuse/src/: main.rs
fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  config.rs  disk_inode.rs  efs.rs  inode.rs  lib.rs  super_block.rs
os/: Cargo.toml  Makefile  build.rs
os/.cargo/: config.toml
os/src/: batch.rs  boot.s  config.rs  console.rs  lang_items.rs  linker.ld  linker_nosbi.ld  loader.rs  main.rs  sbi.rs  syscall.rs  timer.rs  uart.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  virtio_blk.rs
os/src/fs/: inode.rs  mod.rs  stdio.rs
os/src/mm/: address.rs  area.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  range.rs
os/src/sync/: mod.rs  up.rs
os/src/syscall/: file_syscall.rs  fs.rs  mod.rs  process.rs
os/src/task/: context.rs  mod.rs  pid.rs  processor.rs  switch.rs  switch.s  task.rs  task_manager.rs
os/src/timer/: m_trap.s  mod.rs
os/src/trap/: context.rs  mod.rs  trap.s
user/: Cargo.toml  Makefile  build.py
user/src/: console.rs  lib.rs  linker.ld  syscall.rs
