[package]
name = "ACore"
version = "0.1.0"
edition = "2024"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
bitflags = "1.3.2" # no_std is required



[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true