[package]
name = "user_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
#riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
#buddy_system_allocator = "0.6"
buddy_allocator = { path = "../allocator" }

[profile.release]
debug = true

# [features]
# board_qemu = []
# board_k210 = []